=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.17 - In Development

=over

=item *

Added a method to ElementClass which can be overridden to decide
during a publish if a L<Krang::ElementClass::CategoryLink> should
cause other stories to be published. [Brad Oaks]

=back

=head2 3.16 - January, 25 2011

=over

=item *

On startup the C<bin/krang_scheduled> daemon clears the claim for any
stuck Schedule entries where the claim contains the machine's hostname.
[Brad Oaks]

=item *

Updated C<Krang.Window.log_out()> so that it updates other logged in
windows or tabs to reflect that the user has logged out. [Brad Oaks]

=item *

Optimize C<Krang::Group->add_user_permissions()> so that it doesn't
perform so many database queries. The count can grow dramatically as
the number of users and categories increases. [Michael Peters]

=item *

Added C<--groups> option to F<bin/krang_floodfill>. [Michael Peters]

=item *

Fixed the "Edit Media" screen to be able to transform images in multiple
windows.  [Brad Oaks]

=item *

Prevent users from submitting 2 different actions at the same time when
editting elements (eg, Add Element + Reorder) before the 1st one has
finished. [Michael Peters]

=item *

Fixed element editor bug where re-ordering and adding elements at
the same time could result in weirdness depending on the element's
classes. [Michael Peters]

=item *

C<Krang::ElementClass::TopLevel::publish_frontend_app_template()> now has
an additional (optional) C<template> parameter that can be used in place
of C<filename> if you already have a template to pass. [Michael Peters]

=item *

Fixing bug where messages during publish were getting lost [Michael
Peters]

=item * 

Allowed multiple schedulers to run without processing the same
schedules. [Bodo Schulze]

=item *

Added 4 flags to L<Krang::ElementClass::CategoryLink> implementing a
'conditional publishing behavor' for stories having CategoryLinks.